--- a/klug-dactyl.html
+++ b/klug-dactyl.html
@@ -26,7 +26,7 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-09 Tue 12:36</p>
+<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-09 Tue 13:52</p>
 </section>
 <aside class="notes">
 <p>
@@ -40,8 +40,8 @@ Collect Info &amp; Tutorial Sources for
 </aside>
 
 <section>
-<section id="slide-org4537aae">
-<h2 id="org4537aae">Tim Anderson</h2>
+<section id="slide-orgbba7714">
+<h2 id="orgbba7714">Tim Anderson</h2>
 <p>
 Who am I?
 </p>
@@ -67,8 +67,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-org19bc63f">
-<h2 id="org19bc63f">So, what is this Dactyl Keyboard thing?</h2>
+<section id="slide-org5dafe4d">
+<h2 id="org5dafe4d">So, what is this Dactyl Keyboard thing?</h2>
 
 <div class="figure">
 <p><img src="img/brooke_baldwin.jpg" alt="brooke_baldwin.jpg" />
@@ -77,8 +77,12 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-org2f63857">
-<h2 id="org2f63857">Columnar, Ortholinear, written in Clojure</h2>
+<section id="slide-orgd353279">
+<h2 id="orgd353279">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
+<ul>
+<li>Written in Clojure</li>
+
+</ul>
 <aside class="notes">
 <p>
 Those are a lot of fancy words. What does any of that mean? Well we'll get back
@@ -88,17 +92,20 @@ to that.
 </aside>
 
 </section>
-<section id="slide-org97f1f81">
-<h3 id="org97f1f81">History or Background</h3>
+<section id="slide-org0cc39f6">
+<h3 id="org0cc39f6">History or Background</h3>
+<p>
+&lt;video width="560" height="315" src="<a href="https://www.youtube.com/embed/uk3A41U0iO4">https://www.youtube.com/embed/uk3A41U0iO4</a>" frameborder="0" allowfullscreen&gt;&lt;/video&gt;
+</p>
 <ul>
-<li>Matt's Clojurcon Youtube Video</li>
+<li><a href="https://www.youtube.com/watch?v=uk3A41U0iO4">https://www.youtube.com/watch?v=uk3A41U0iO4</a></li>
 <li>Matt's Reasons for making the design</li>
 <li>Dactyl was Written in Clojure with the Help of OpenSCAD</li>
 
 </ul>
 </section>
-<section id="slide-org20b7b36">
-<h3 id="org20b7b36">Reasons for Choosing Dactyl</h3>
+<section id="slide-org740dd78">
+<h3 id="org740dd78">Reasons for Choosing Dactyl</h3>
 <ul>
 <li>Kinesis Advantage form factor</li>
 <li>Open Source</li>
@@ -110,8 +117,8 @@ to that.
 </section>
 </section>
 <section>
-<section id="slide-org7fae3fc">
-<h2 id="org7fae3fc">Why Would You Want That?</h2>
+<section id="slide-org6b98914">
+<h2 id="org6b98914">Why Would You Want That?</h2>
 <aside class="notes">
 <p>
 While browsing around looking at these ergonomic keyboards I see a recurring
@@ -131,8 +138,8 @@ keyboard is the way it is, so that we can understand what we're working with.
 
 </aside>
 </section>
-<section id="slide-orgda7fc38">
-<h3 id="orgda7fc38">Let's look at a regular keyboard</h3>
+<section id="slide-orgfae3068">
+<h3 id="orgfae3068">Let's look at a regular keyboard</h3>
 <ul>
 <li>History of Typwriter According to Matt Addereth</li>
 <li>Keyboard design may be a bit antiquated</li>
@@ -168,19 +175,19 @@ build my own badass keyboard, so I did.
 
 </aside>
 </section>
-<section id="slide-org447f1db">
-<h3 id="org447f1db">Benefits of Ergo keyboards</h3>
+<section id="slide-org46049dd">
+<h3 id="org46049dd">Benefits of Ergo keyboards</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgd669408">
-<h2 id="orgd669408">Notable Mentions</h2>
-<div class="outline-text-2" id="text-orgd669408">
+<section id="slide-orgc38c7cc">
+<h2 id="orgc38c7cc">Notable Mentions</h2>
+<div class="outline-text-2" id="text-orgc38c7cc">
 </div>
 </section>
-<section id="slide-orgaec7fb5">
-<h3 id="orgaec7fb5">Kinesis Advantage2</h3>
+<section id="slide-org9556192">
+<h3 id="org9556192">Kinesis Advantage2</h3>
 
 <div class="figure">
 <p><img src="img/Kinesis_Adv2.jpg" alt="Kinesis_Adv2.jpg" />
@@ -201,8 +208,8 @@ As I
 </aside>
 
 </section>
-<section id="slide-orgd7dc3e1">
-<h3 id="orgd7dc3e1">ErgoDox EZ</h3>
+<section id="slide-orgbfa1027">
+<h3 id="orgbfa1027">[[][ErgoDox EZ]]</h3>
 
 <div class="figure">
 <p><img src="img/Ergodox_EZ.jpg" alt="Ergodox_EZ.jpg" />
@@ -224,8 +231,8 @@ a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech T
 </aside>
 
 </section>
-<section id="slide-org4d9af19">
-<h3 id="org4d9af19">Let's Split</h3>
+<section id="slide-org209a6a5">
+<h3 id="org209a6a5"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
 
 <div class="figure">
 <p><img src="img/Let's_Split.jpg" alt="Let's_Split.jpg" />
@@ -246,8 +253,8 @@ a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech T
 </aside>
 
 </section>
-<section id="slide-org2808274">
-<h3 id="org2808274">Atreus</h3>
+<section id="slide-orgf3cd93c">
+<h3 id="orgf3cd93c">[[][Atreus]]</h3>
 
 <div class="figure">
 <p><img src="img/Atreus.jpg" alt="Atreus.jpg" />
@@ -272,8 +279,8 @@ being easy to grab &amp; go if you're using it in a mobile set-up.
 </aside>
 
 </section>
-<section id="slide-org8ff1071">
-<h3 id="org8ff1071">Signum 3 (Troy Fletcher)</h3>
+<section id="slide-org7f825fb">
+<h3 id="org7f825fb">[[][Signum 3 (Troy Fletcher)]]</h3>
 
 <div class="figure">
 <p><img src="img/Signum3.0.jpg" alt="Signum3.0.jpg" />
@@ -294,13 +301,13 @@ Notable differences between the Signum 3 &amp; Atreus are the thumb clusters.
 </aside>
 
 </section>
-<section id="slide-org791fa26">
-<h3 id="org791fa26">Other Dactyl Variations</h3>
-<div class="outline-text-3" id="text-org791fa26">
+<section id="slide-org4e5d938">
+<h3 id="org4e5d938">Other Dactyl Variations</h3>
+<div class="outline-text-3" id="text-org4e5d938">
 </div>
 </section>
-<section id="slide-org1f82201">
-<h4 id="org1f82201">Ergo Dactyl</h4>
+<section id="slide-orgcd6d2ae">
+<h4 id="orgcd6d2ae">[[][Ergo Dactyl]]</h4>
 <ul>
 <li class="fragment fade-in">Advantages:</li>
 <li class="fragment fade-in">Disadvantages:</li>
@@ -309,15 +316,19 @@ Notable differences between the Signum 3 &amp; Atreus are the thumb clusters.
 </ul>
 <aside class="notes">
 <p>
-Redesigned to fit Ergodox keycaps.
+This was a pull request by Joe Devivo (One of the writers of the earlier build
+guides). He was attempting to add some changes to fit the Ergodox keycaps, but
+the latest update to the pull was from 2017. /u/chrystalhand has apparently made
+more updates to the design and is <a href="https://www.reddit.com/user/crystalhand/comments/96xu7g/3d_printed_dactylmanuform_cases/">trying to market it on Reddit</a> and <a href="https://ohkeycaps.com/products/built-to-order-dactyl-manuform-keyboard">OhKeycaps.com</a>. I don't know if
+he's made the source available.
 </p>
 
 </aside>
 
 
 </section>
-<section id="slide-orgc31f53d">
-<h4 id="orgc31f53d">Lightcycle Dactyl</h4>
+<section id="slide-org743d996">
+<h4 id="org743d996">[[][Lightcycle Dactyl]]</h4>
 <ul>
 <li class="fragment fade-in">Advantages:</li>
 <li class="fragment fade-in">Disadvantages:</li>
@@ -326,14 +337,17 @@ Redesigned to fit Ergodox keycaps.
 </ul>
 <aside class="notes">
 <p>
-
+In the main repository you'll find this as an option along with the 'cherry' version. The LightCycle version of
+the Dactyl has fewer thumb cluster switch positions, and was designed to match with the <a href="http://matias.ca/switches/">Matias
+ALPS-inspired mechanical keyswitches</a>. The 'cherry' one is the same design, but
+meant to fit with Cherry MX mechanical switches.
 </p>
 
 </aside>
 
 </section>
-<section id="slide-orgd15b50e">
-<h4 id="orgd15b50e">Dactyl Manuform</h4>
+<section id="slide-orgdf3f0d4">
+<h4 id="orgdf3f0d4">[[Dactyl Manuform][]]</h4>
 <ul>
 <li>Advantages:</li>
 <li>Disadvantages:</li>
@@ -342,7 +356,12 @@ Redesigned to fit Ergodox keycaps.
 </ul>
 <aside class="notes">
 <p>
-
+I think probably the best designed of all of the options I've seen. The Manuform
+retains all of the features you would look for in the original, but lowers the
+thumb clusters so that you hands can remain in a more natural position. Notable
+hardware differences between this &amp; the original are the use of DSA keycaps used
+and the use of 2 Pro Micros for the microcontroller. I'll probably build &amp;
+switch to this in the future.
 </p>
 
 </aside>
@@ -350,53 +369,65 @@ Redesigned to fit Ergodox keycaps.
 </section>
 </section>
 <section>
-<section id="slide-org62cf738">
-<h2 id="org62cf738">Dactyl Project</h2>
-<div class="outline-text-2" id="text-org62cf738">
+<section id="slide-org2a727d8">
+<h2 id="org2a727d8">Dactyl Project</h2>
+<div class="outline-text-2" id="text-org2a727d8">
 </div>
 </section>
-<section id="slide-orgddeaccc">
-<h3 id="orgddeaccc">My Reasons for Building by Hand Instead of Purchasing</h3>
+<section id="slide-org1cf757d">
+<h3 id="org1cf757d">My Reasons for Building by Hand Instead of Purchasing</h3>
 <ul>
 <li>At the time there were none being manufactured</li>
 <li>Sense of self-satisfaction</li>
-<li>Building my own helps me to improve the project by contributing personal
-improvements back (Open Source)</li>
 <li>I already own a 3D printer</li>
 <li>Screw paying someone else &gt;$300, I'll just build my own!</li>
 <li>One year later joke</li>
 
 </ul>
 </section>
-<section id="slide-org87ef8fc">
-<h3 id="org87ef8fc">Build Overview</h3>
-<div class="outline-text-3" id="text-org87ef8fc">
+<section id="slide-orgbd71909">
+<h3 id="orgbd71909">Build Overview</h3>
+<div class="outline-text-3" id="text-orgbd71909">
 </div>
 </section>
-<section id="slide-orgcaa15ac">
-<h4 id="orgcaa15ac">Shell/Case</h4>
+<section id="slide-org2df4680">
+<h4 id="org2df4680">Shell/Case</h4>
 </section>
-<section id="slide-org98392c6">
-<h4 id="org98392c6">Switches &amp; Keycaps</h4>
+<section id="slide-org12d9243">
+<h4 id="org12d9243">Switches &amp; Keycaps</h4>
 </section>
-<section id="slide-orgac86b48">
-<h4 id="orgac86b48">Hardware</h4>
+<section id="slide-orgb863ee4">
+<h4 id="orgb863ee4">Hardware</h4>
 </section>
-<section id="slide-orgb006746">
-<h4 id="orgb006746">PCB &amp; Wiring</h4>
+<section id="slide-org7cd6cf3">
+<h4 id="org7cd6cf3">Etching</h4>
+<ul>
+<li>1:1 ratio of 3% Hydrogen Peroxide &amp; Acid Magic (muriatic acid)</li>
+
+</ul>
 </section>
-<section id="slide-org1f0fc94">
-<h4 id="org1f0fc94">Firmware</h4>
+<section id="slide-orgd04cce2">
+<h4 id="orgd04cce2">PCB &amp; Wiring</h4>
+<ul>
+<li>The curcuit desigt in the repo is inaccurate. I had to flip around some of
+the designs because they were backwards. I didn't find this out until after my
+first attempt at etching. Luckily I had another sheet of Pyralux that I bought
+in case I encountered those kinds of problems.</li>
+
+</ul>
 </section>
-<section id="slide-org28c141c">
-<h4 id="org28c141c">How Does it Work?</h4>
+<section id="slide-org48c85ed">
+<h4 id="org48c85ed">Firmware</h4>
+</section>
+<section id="slide-org63ad2a2">
+<h4 id="org63ad2a2">How Does it Work?</h4>
 <ul>
 <li>Explain matrix positions</li>
 
 </ul>
 </section>
-<section id="slide-org6d9232b">
-<h4 id="org6d9232b">Challenges</h4>
+<section id="slide-orgff79bc7">
+<h4 id="orgff79bc7">Challenges</h4>
 <ul>
 <li>Hardware, clearance &amp; dimentions</li>
 <li>PCB etching (I probably went the most expensive route.)</li>
@@ -407,11 +438,8 @@ improvements back (Open Source)</li>
 </section>
 </section>
 <section>
-<section id="slide-org1f5f6a4">
-<h2 id="org1f5f6a4">Where To Buy</h2>
-<p>
-I have no affiliation or experience with the following. YMMV!
-</p>
+<section id="slide-org883222f">
+<h2 id="org883222f">Where To Buy</h2>
 <ul>
 <li><a href="https://drop.com">Drop.com (formerly MassDrop)</a></li>
 
@@ -419,18 +447,44 @@ I have no affiliation or experience with the following. YMMV!
 <p>
 Crowd sourced, limited manufacturing.
 </p>
+<aside class="notes">
+<p>
+
+</p>
+
+</aside>
 <ul>
-<li><a href="https://ergodox-ez.com">Ergodox EZ</a></li>
 <li><a href="https://ohkeycaps.com">OhKeycaps.com</a></li>
+
+</ul>
+<p>
+Working with members of the reddit mechanical keyboard community to
+commercialize different Dactyl variations.
+</p>
+<ul>
+<li><a href="https://mehkee.com/products/lets-split-pcb?variant=46050392207">Let's Split PCBs</a></li>
+
+</ul>
+<p>
+<code>I have no affiliation or experience with the following. YMMV!=</code>
+</p>
+</section>
+<section id="slide-orge2864b9">
+<h3 id="orge2864b9">Hardware &amp; Accessories</h3>
+<ul>
+<li><a href="https://kbdfans.com">https://kbdfans.com</a></li>
+<li><a href="https://aliexpress.com">https://aliexpress.com</a></li>
+<li><a href="https://pimpmykeyboard.com/">https://pimpmykeyboard.com/</a></li>
+<li><a href="https://mechanicalkeyboards.com/shop/index.php?l=product_list&amp;c=9">https://mechanicalkeyboards.com/shop/index.php?l=product_list&amp;c=9</a></li>
 
 </ul>
 </section>
 </section>
 <section>
-<section id="slide-orgb98d072">
-<h2 id="orgb98d072">References</h2>
+<section id="slide-org7a37b5a">
+<h2 id="org7a37b5a">References</h2>
 <p>
-<a id="org14bd73a"></a>Das Blog.com
+<a id="org1b568a1"></a>Das Blog.com
 </p>
 </section>
 </section>
