More additions & organization.

--- a/klug-dactyl.html
+++ b/klug-dactyl.html
@@ -26,7 +26,7 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-09 Tue 13:52</p>
+<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-09 Tue 21:22</p>
 </section>
 <aside class="notes">
 <p>
@@ -40,8 +40,8 @@ Collect Info &amp; Tutorial Sources for
 </aside>
 
 <section>
-<section id="slide-orgbba7714">
-<h2 id="orgbba7714">Tim Anderson</h2>
+<section id="slide-orge423ed9">
+<h2 id="orge423ed9">Tim Anderson</h2>
 <p>
 Who am I?
 </p>
@@ -67,8 +67,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-org5dafe4d">
-<h2 id="org5dafe4d">So, what is this Dactyl Keyboard thing?</h2>
+<section id="slide-org7274189">
+<h2 id="org7274189">So, what is this Dactyl Keyboard thing?</h2>
 
 <div class="figure">
 <p><img src="img/brooke_baldwin.jpg" alt="brooke_baldwin.jpg" />
@@ -77,56 +77,21 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-orgd353279">
-<h2 id="orgd353279">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
+<section id="slide-org9b6283c">
+<h2 id="org9b6283c">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
 <ul>
 <li>Written in Clojure</li>
 
 </ul>
+
+<div class="figure">
+<p><img src="img/chan.png" alt="chan.png" class="fragment (fade-in fade-in fade-in)" />
+</p>
+</div>
 <aside class="notes">
 <p>
-Those are a lot of fancy words. What does any of that mean? Well we'll get back
-to that.
-</p>
-
-</aside>
-
-</section>
-<section id="slide-org0cc39f6">
-<h3 id="org0cc39f6">History or Background</h3>
-<p>
-&lt;video width="560" height="315" src="<a href="https://www.youtube.com/embed/uk3A41U0iO4">https://www.youtube.com/embed/uk3A41U0iO4</a>" frameborder="0" allowfullscreen&gt;&lt;/video&gt;
-</p>
-<ul>
-<li><a href="https://www.youtube.com/watch?v=uk3A41U0iO4">https://www.youtube.com/watch?v=uk3A41U0iO4</a></li>
-<li>Matt's Reasons for making the design</li>
-<li>Dactyl was Written in Clojure with the Help of OpenSCAD</li>
-
-</ul>
-</section>
-<section id="slide-org740dd78">
-<h3 id="org740dd78">Reasons for Choosing Dactyl</h3>
-<ul>
-<li>Kinesis Advantage form factor</li>
-<li>Open Source</li>
-<li>Looked like the most comfortable design</li>
-<li>Also looked hella cool</li>
-
-</ul>
-
-</section>
-</section>
-<section>
-<section id="slide-org6b98914">
-<h2 id="org6b98914">Why Would You Want That?</h2>
-<aside class="notes">
-<p>
-While browsing around looking at these ergonomic keyboards I see a recurring
-question: "Why would you need/want that.", and I think that it's a fair question.
-It smacks of iPhone ownership or RGB lighting: Do you really need that? To the
-outside observer it might look like an expensive, showy &amp; unnecessary gadget.
-But I think there are real health benefits to using a proper ergonomic keyboard, and in
-this talk I'd like to go over some of the things I've found while looking into the topic.
+Those are a lot of fancy words. What does all of that mean? Well let's look at
+the project &amp; see how it compares to a regular keyboard to answer that.
 </p>
 
 </aside>
@@ -137,9 +102,27 @@ keyboard is the way it is, so that we can understand what we're working with.
 </p>
 
 </aside>
+
 </section>
-<section id="slide-orgfae3068">
-<h3 id="orgfae3068">Let's look at a regular keyboard</h3>
+</section>
+<section>
+<section id="slide-org1163cc8">
+<h2 id="org1163cc8">History &amp; Background</h2>
+<p>
+<iframe width="440" height="335" src="https://www.youtube.com/embed/uk3A41U0iO4" frameborder="0" allowfullscreen></iframe>
+</p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=uk3A41U0iO4">https://www.youtube.com/watch?v=uk3A41U0iO4</a></li>
+<li>Matt's Reasons for making the design</li>
+<li>Dactyl was Written in Clojure with the Help of OpenSCAD</li>
+
+</ul>
+
+</section>
+</section>
+<section>
+<section id="slide-orgbfe3822">
+<h2 id="orgbfe3822">Let's look at a regular keyboard</h2>
 <ul>
 <li>History of Typwriter According to Matt Addereth</li>
 <li>Keyboard design may be a bit antiquated</li>
@@ -163,6 +146,10 @@ that out of the way, let's look at some things the internet tells you not to do.
 <li>My personal reasons</li>
 
 </ul>
+
+</section>
+<section id="slide-org01181c6">
+<h3 id="org01181c6">Benefits of Ergo keyboards</h3>
 <aside class="notes">
 <p>
 I consider my hands to be my greatest physical asset, other than my brain. To be
@@ -174,20 +161,49 @@ build my own badass keyboard, so I did.
 </p>
 
 </aside>
-</section>
-<section id="slide-org46049dd">
-<h3 id="org46049dd">Benefits of Ergo keyboards</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgc38c7cc">
-<h2 id="orgc38c7cc">Notable Mentions</h2>
-<div class="outline-text-2" id="text-orgc38c7cc">
-</div>
+<section id="slide-org1afa92b">
+<h2 id="org1afa92b">Why Would You Want That?</h2>
+<aside class="notes">
+<p>
+While browsing around looking at these ergonomic keyboards I see a recurring
+question: "Why would you need/want that.", and I think that it's a fair question.
+It smacks of iPhone ownership or RGB lighting: Do you really need that? To the
+outside observer it might look like an expensive, showy &amp; unnecessary gadget.
+But I think there are real health benefits to using a proper ergonomic keyboard, and in
+this talk I'd like to go over some of the things I've found while looking into the topic.
+</p>
+
+</aside>
+
+<aside class="notes">
+<p>
+Now the reason I went over the RSI examples is to demonstrate how a regular
+keyboard ~postures &amp; how the designs of these ergonomic keyboards I'm about to
+show you are informed by those issues and how they ~mitigate
+</p>
+
+</aside>
+
 </section>
-<section id="slide-org9556192">
-<h3 id="org9556192">Kinesis Advantage2</h3>
+</section>
+<section>
+<section id="slide-orge6e479b">
+<h2 id="orge6e479b">Notable Mentions</h2>
+<aside class="notes">
+<p>
+The original Dactyl design is what I chose to go with, and I'll go over my
+reasons for that later on. But first I'd like to quickly show everyone some
+other option available &amp; what I like and don't like about them.
+</p>
+
+</aside>
+</section>
+<section id="slide-org210b3c5">
+<h3 id="org210b3c5"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
 
 <div class="figure">
 <p><img src="img/Kinesis_Adv2.jpg" alt="Kinesis_Adv2.jpg" />
@@ -208,8 +224,8 @@ As I
 </aside>
 
 </section>
-<section id="slide-orgbfa1027">
-<h3 id="orgbfa1027">[[][ErgoDox EZ]]</h3>
+<section id="slide-orgd2da2db">
+<h3 id="orgd2da2db"><a href="https://ergodox-ez.com/">ErgoDox EZ</a></h3>
 
 <div class="figure">
 <p><img src="img/Ergodox_EZ.jpg" alt="Ergodox_EZ.jpg" />
@@ -231,8 +247,8 @@ a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech T
 </aside>
 
 </section>
-<section id="slide-org209a6a5">
-<h3 id="org209a6a5"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
+<section id="slide-orgaf03f15">
+<h3 id="orgaf03f15"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
 
 <div class="figure">
 <p><img src="img/Let's_Split.jpg" alt="Let's_Split.jpg" />
@@ -253,8 +269,8 @@ a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech T
 </aside>
 
 </section>
-<section id="slide-orgf3cd93c">
-<h3 id="orgf3cd93c">[[][Atreus]]</h3>
+<section id="slide-org202215d">
+<h3 id="org202215d"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
 
 <div class="figure">
 <p><img src="img/Atreus.jpg" alt="Atreus.jpg" />
@@ -279,8 +295,8 @@ being easy to grab &amp; go if you're using it in a mobile set-up.
 </aside>
 
 </section>
-<section id="slide-org7f825fb">
-<h3 id="org7f825fb">[[][Signum 3 (Troy Fletcher)]]</h3>
+<section id="slide-orgdb3b397">
+<h3 id="orgdb3b397"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
 
 <div class="figure">
 <p><img src="img/Signum3.0.jpg" alt="Signum3.0.jpg" />
@@ -296,18 +312,27 @@ being easy to grab &amp; go if you're using it in a mobile set-up.
 <aside class="notes">
 <p>
 Notable differences between the Signum 3 &amp; Atreus are the thumb clusters.
+Reference Youtube channel.
 </p>
 
 </aside>
 
 </section>
-<section id="slide-org4e5d938">
-<h3 id="org4e5d938">Other Dactyl Variations</h3>
-<div class="outline-text-3" id="text-org4e5d938">
+</section>
+<section>
+<section id="slide-org4f80671">
+<h2 id="org4f80671">Other Dactyl Variations</h2>
+<div class="outline-text-2" id="text-org4f80671">
 </div>
 </section>
-<section id="slide-orgcd6d2ae">
-<h4 id="orgcd6d2ae">[[][Ergo Dactyl]]</h4>
+<section id="slide-org1499765">
+<h3 id="org1499765"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
+
+<div class="figure">
+<p><img src="img/Dactyl Ergodox.png" alt="Dactyl Ergodox.png" />
+</p>
+</div>
+
 <ul>
 <li class="fragment fade-in">Advantages:</li>
 <li class="fragment fade-in">Disadvantages:</li>
@@ -325,10 +350,9 @@ he's made the source available.
 
 </aside>
 
-
 </section>
-<section id="slide-org743d996">
-<h4 id="org743d996">[[][Lightcycle Dactyl]]</h4>
+<section id="slide-orgeec3481">
+<h3 id="orgeec3481"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
 <ul>
 <li class="fragment fade-in">Advantages:</li>
 <li class="fragment fade-in">Disadvantages:</li>
@@ -346,12 +370,18 @@ meant to fit with Cherry MX mechanical switches.
 </aside>
 
 </section>
-<section id="slide-orgdf3f0d4">
-<h4 id="orgdf3f0d4">[[Dactyl Manuform][]]</h4>
+<section id="slide-org4ff08bd">
+<h3 id="org4ff08bd"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
+
+<div class="figure">
+<p><img src="img/Dactyl Manuform.jpg" alt="Dactyl Manuform.jpg" />
+</p>
+</div>
+
 <ul>
-<li>Advantages:</li>
-<li>Disadvantages:</li>
-<li>Open Source:</li>
+<li class="fragment fade-in">Advantages:</li>
+<li class="fragment fade-in">Disadvantages:</li>
+<li class="fragment fade-in">Open Source:</li>
 
 </ul>
 <aside class="notes">
@@ -369,13 +399,32 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-org2a727d8">
-<h2 id="org2a727d8">Dactyl Project</h2>
-<div class="outline-text-2" id="text-org2a727d8">
-</div>
+<section id="slide-org93964f0">
+<h2 id="org93964f0">More Do-it-Yourself Options</h2>
+<p>
+<code>There is a very nice list of other ergonomic keyboards, with pictures, on Xah Lee's website.</code>
+</p>
+
+<ul>
+<li><a href="http://xahlee.info/kbd/diy_keyboards_index.html">http://xahlee.info/kbd/diy_keyboards_index.html</a></li>
+
+</ul>
+
 </section>
-<section id="slide-org1cf757d">
-<h3 id="org1cf757d">My Reasons for Building by Hand Instead of Purchasing</h3>
+</section>
+<section>
+<section id="slide-orgb345363">
+<h2 id="orgb345363">Reasons for Choosing Dactyl</h2>
+<ul>
+<li>Open Source</li>
+<li>Kinesis Advantage form factor</li>
+<li>Looked like the most comfortable design</li>
+<li>Also looked hella cool</li>
+
+</ul>
+</section>
+<section id="slide-org787aae4">
+<h3 id="org787aae4">My Reasons for Building by Hand Instead of Purchasing</h3>
 <ul>
 <li>At the time there were none being manufactured</li>
 <li>Sense of self-satisfaction</li>
@@ -385,61 +434,105 @@ switch to this in the future.
 
 </ul>
 </section>
-<section id="slide-orgbd71909">
-<h3 id="orgbd71909">Build Overview</h3>
-<div class="outline-text-3" id="text-orgbd71909">
+</section>
+<section>
+<section id="slide-orgb2b8d61">
+<h2 id="orgb2b8d61">Build Overview</h2>
+<div class="outline-text-2" id="text-orgb2b8d61">
 </div>
 </section>
-<section id="slide-org2df4680">
-<h4 id="org2df4680">Shell/Case</h4>
+<section id="slide-org1ff5ea6">
+<h3 id="org1ff5ea6">Shell/Case &amp; Hardware</h3>
+<ul>
+<li>Time</li>
+<li>Apologize for lack of media</li>
+<li>Print process involved trial &amp; error. Segway into 3D print &amp; support material.</li>
+<li>Hardware dimensions &amp; heating countersunk screws. Make point of heatshrink on standoffs.</li>
+
+</ul>
+<aside class="notes">
+<p>
+
+</p>
+
+</aside>
+
 </section>
-<section id="slide-org12d9243">
-<h4 id="org12d9243">Switches &amp; Keycaps</h4>
+<section id="slide-org55cc649">
+<h3 id="org55cc649">Switches &amp; Keycaps</h3>
+<ul>
+<li>Fits Cherry MX switches, explain what they are</li>
+<li>Go over keycap profiles</li>
+<li>Keycap material, count &amp; price</li>
+
+</ul>
 </section>
-<section id="slide-orgb863ee4">
-<h4 id="orgb863ee4">Hardware</h4>
-</section>
-<section id="slide-org7cd6cf3">
-<h4 id="org7cd6cf3">Etching</h4>
+<section id="slide-orgdc7fa8c">
+<h3 id="orgdc7fa8c">Etching</h3>
 <ul>
 <li>1:1 ratio of 3% Hydrogen Peroxide &amp; Acid Magic (muriatic acid)</li>
 
 </ul>
 </section>
-<section id="slide-orgd04cce2">
-<h4 id="orgd04cce2">PCB &amp; Wiring</h4>
+<section id="slide-org3e4babd">
+<h3 id="org3e4babd">PCB &amp; Wiring</h3>
 <ul>
-<li>The curcuit desigt in the repo is inaccurate. I had to flip around some of
+<li>The circuit design in the repo is inaccurate. I had to flip around some of
 the designs because they were backwards. I didn't find this out until after my
 first attempt at etching. Luckily I had another sheet of Pyralux that I bought
 in case I encountered those kinds of problems.</li>
+<li>Resistors for LEDs</li>
 
 </ul>
+<ul class="org-ul">
+<li><a id="org579386b"></a>PSA: TRRS <i>not</i> TRS!<br />
+<ul>
+<li>Include comparison.</li>
+
+</ul>
+<aside class="notes">
+<p>
+
+</p>
+
+</aside>
+</li>
+</ul>
 </section>
-<section id="slide-org48c85ed">
-<h4 id="org48c85ed">Firmware</h4>
+<section id="slide-org3bbf9b5">
+<h3 id="org3bbf9b5">Firmware</h3>
 </section>
-<section id="slide-org63ad2a2">
-<h4 id="org63ad2a2">How Does it Work?</h4>
+<section id="slide-orgc3ab828">
+<h3 id="orgc3ab828">How Does it Work?</h3>
 <ul>
 <li>Explain matrix positions</li>
 
 </ul>
 </section>
-<section id="slide-orgff79bc7">
-<h4 id="orgff79bc7">Challenges</h4>
+<section id="slide-orgda5c932">
+<h3 id="orgda5c932">Challenges</h3>
 <ul>
-<li>Hardware, clearance &amp; dimentions</li>
+<li>Hardware, clearance &amp; dimensions</li>
+<li>Choosing LED Resistors</li>
+<li>PCB design</li>
 <li>PCB etching (I probably went the most expensive route.)</li>
 <li>Which way to wire the diodes</li>
+<li>Wiring the Teensy</li>
 <li>How the keyboard is controlled by the MC (key matrix)</li>
+
+</ul>
+</section>
+<section id="slide-org253501b">
+<h3 id="org253501b">What Did it Cost?</h3>
+<ul>
+<li>Parts table</li>
 
 </ul>
 </section>
 </section>
 <section>
-<section id="slide-org883222f">
-<h2 id="org883222f">Where To Buy</h2>
+<section id="slide-org4dce776">
+<h2 id="org4dce776">Resources</h2>
 <ul>
 <li><a href="https://drop.com">Drop.com (formerly MassDrop)</a></li>
 
@@ -466,26 +559,19 @@ commercialize different Dactyl variations.
 
 </ul>
 <p>
-<code>I have no affiliation or experience with the following. YMMV!=</code>
+<code>I have no affiliation or experience with the above. YMMV!</code>
 </p>
 </section>
-<section id="slide-orge2864b9">
-<h3 id="orge2864b9">Hardware &amp; Accessories</h3>
+<section id="slide-orgd428acd">
+<h3 id="orgd428acd">Hardware &amp; Accessories</h3>
 <ul>
 <li><a href="https://kbdfans.com">https://kbdfans.com</a></li>
-<li><a href="https://aliexpress.com">https://aliexpress.com</a></li>
+<li><a href="https://aliexpress.com">https://aliexpress.com</a>
+<a href="https://digikey.com">https://digikey.com</a></li>
 <li><a href="https://pimpmykeyboard.com/">https://pimpmykeyboard.com/</a></li>
 <li><a href="https://mechanicalkeyboards.com/shop/index.php?l=product_list&amp;c=9">https://mechanicalkeyboards.com/shop/index.php?l=product_list&amp;c=9</a></li>
 
 </ul>
-</section>
-</section>
-<section>
-<section id="slide-org7a37b5a">
-<h2 id="org7a37b5a">References</h2>
-<p>
-<a id="org1b568a1"></a>Das Blog.com
-</p>
 </section>
 </section>
 </div>
