--- a/klug-dactyl.html
+++ b/klug-dactyl.html
@@ -26,7 +26,7 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-09 Tue 21:22</p>
+<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-10 Wed 00:59</p>
 </section>
 <aside class="notes">
 <p>
@@ -40,8 +40,8 @@ Collect Info &amp; Tutorial Sources for
 </aside>
 
 <section>
-<section id="slide-orge423ed9">
-<h2 id="orge423ed9">Tim Anderson</h2>
+<section id="slide-orga0f5a84">
+<h2 id="orga0f5a84">Tim Anderson</h2>
 <p>
 Who am I?
 </p>
@@ -67,8 +67,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-org7274189">
-<h2 id="org7274189">So, what is this Dactyl Keyboard thing?</h2>
+<section id="slide-orgd40cfc0">
+<h2 id="orgd40cfc0">So, what is this Dactyl Keyboard thing?</h2>
 
 <div class="figure">
 <p><img src="img/brooke_baldwin.jpg" alt="brooke_baldwin.jpg" />
@@ -77,8 +77,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-org9b6283c">
-<h2 id="org9b6283c">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
+<section id="slide-orga380f34">
+<h2 id="orga380f34">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
 <ul>
 <li>Written in Clojure</li>
 
@@ -106,13 +106,14 @@ keyboard is the way it is, so that we can understand what we're working with.
 </section>
 </section>
 <section>
-<section id="slide-org1163cc8">
-<h2 id="org1163cc8">History &amp; Background</h2>
+<section id="slide-orgc8e5eca">
+<h2 id="orgc8e5eca">History &amp; Background</h2>
 <p>
-<iframe width="440" height="335" src="https://www.youtube.com/embed/uk3A41U0iO4" frameborder="0" allowfullscreen></iframe>
+<a href="uk3A41U0iO4">uk3A41U0iO4</a>
 </p>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=uk3A41U0iO4">https://www.youtube.com/watch?v=uk3A41U0iO4</a></li>
+<li>Started March 2015</li>
 <li>Matt's Reasons for making the design</li>
 <li>Dactyl was Written in Clojure with the Help of OpenSCAD</li>
 
@@ -121,8 +122,8 @@ keyboard is the way it is, so that we can understand what we're working with.
 </section>
 </section>
 <section>
-<section id="slide-orgbfe3822">
-<h2 id="orgbfe3822">Let's look at a regular keyboard</h2>
+<section id="slide-orgc20f9a4">
+<h2 id="orgc20f9a4">Let's look at a regular keyboard</h2>
 <ul>
 <li>History of Typwriter According to Matt Addereth</li>
 <li>Keyboard design may be a bit antiquated</li>
@@ -148,8 +149,8 @@ that out of the way, let's look at some things the internet tells you not to do.
 </ul>
 
 </section>
-<section id="slide-org01181c6">
-<h3 id="org01181c6">Benefits of Ergo keyboards</h3>
+<section id="slide-org40db2f4">
+<h3 id="org40db2f4">Benefits of Ergo keyboards</h3>
 <aside class="notes">
 <p>
 I consider my hands to be my greatest physical asset, other than my brain. To be
@@ -165,8 +166,8 @@ build my own badass keyboard, so I did.
 </section>
 </section>
 <section>
-<section id="slide-org1afa92b">
-<h2 id="org1afa92b">Why Would You Want That?</h2>
+<section id="slide-org0d1db71">
+<h2 id="org0d1db71">Why Would You Want That?</h2>
 <aside class="notes">
 <p>
 While browsing around looking at these ergonomic keyboards I see a recurring
@@ -184,6 +185,8 @@ this talk I'd like to go over some of the things I've found while looking into t
 Now the reason I went over the RSI examples is to demonstrate how a regular
 keyboard ~postures &amp; how the designs of these ergonomic keyboards I'm about to
 show you are informed by those issues and how they ~mitigate
+You can see how the design was informed to try and mitigate these things the
+internet tells us not to do.
 </p>
 
 </aside>
@@ -191,8 +194,8 @@ show you are informed by those issues and how they ~mitigate
 </section>
 </section>
 <section>
-<section id="slide-orge6e479b">
-<h2 id="orge6e479b">Notable Mentions</h2>
+<section id="slide-orgf858c7d">
+<h2 id="orgf858c7d">Notable Mentions</h2>
 <aside class="notes">
 <p>
 The original Dactyl design is what I chose to go with, and I'll go over my
@@ -202,8 +205,8 @@ other option available &amp; what I like and don't like about them.
 
 </aside>
 </section>
-<section id="slide-org210b3c5">
-<h3 id="org210b3c5"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
+<section id="slide-org986e6fe">
+<h3 id="org986e6fe"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
 
 <div class="figure">
 <p><img src="img/Kinesis_Adv2.jpg" alt="Kinesis_Adv2.jpg" />
@@ -224,8 +227,8 @@ As I
 </aside>
 
 </section>
-<section id="slide-orgd2da2db">
-<h3 id="orgd2da2db"><a href="https://ergodox-ez.com/">ErgoDox EZ</a></h3>
+<section id="slide-org19ab605">
+<h3 id="org19ab605"><a href="https://ergodox-ez.com/">ErgoDox EZ</a></h3>
 
 <div class="figure">
 <p><img src="img/Ergodox_EZ.jpg" alt="Ergodox_EZ.jpg" />
@@ -247,8 +250,8 @@ a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech T
 </aside>
 
 </section>
-<section id="slide-orgaf03f15">
-<h3 id="orgaf03f15"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
+<section id="slide-orgebe18e2">
+<h3 id="orgebe18e2"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
 
 <div class="figure">
 <p><img src="img/Let's_Split.jpg" alt="Let's_Split.jpg" />
@@ -269,8 +272,8 @@ a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech T
 </aside>
 
 </section>
-<section id="slide-org202215d">
-<h3 id="org202215d"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
+<section id="slide-org05b4aba">
+<h3 id="org05b4aba"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
 
 <div class="figure">
 <p><img src="img/Atreus.jpg" alt="Atreus.jpg" />
@@ -295,8 +298,8 @@ being easy to grab &amp; go if you're using it in a mobile set-up.
 </aside>
 
 </section>
-<section id="slide-orgdb3b397">
-<h3 id="orgdb3b397"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
+<section id="slide-org5e3db29">
+<h3 id="org5e3db29"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
 
 <div class="figure">
 <p><img src="img/Signum3.0.jpg" alt="Signum3.0.jpg" />
@@ -320,13 +323,13 @@ Reference Youtube channel.
 </section>
 </section>
 <section>
-<section id="slide-org4f80671">
-<h2 id="org4f80671">Other Dactyl Variations</h2>
-<div class="outline-text-2" id="text-org4f80671">
+<section id="slide-orgf0a780c">
+<h2 id="orgf0a780c">Other Dactyl Variations</h2>
+<div class="outline-text-2" id="text-orgf0a780c">
 </div>
 </section>
-<section id="slide-org1499765">
-<h3 id="org1499765"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
+<section id="slide-org075620a">
+<h3 id="org075620a"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Ergodox.png" alt="Dactyl Ergodox.png" />
@@ -351,8 +354,8 @@ he's made the source available.
 </aside>
 
 </section>
-<section id="slide-orgeec3481">
-<h3 id="orgeec3481"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
+<section id="slide-org5d718e5">
+<h3 id="org5d718e5"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
 <ul>
 <li class="fragment fade-in">Advantages:</li>
 <li class="fragment fade-in">Disadvantages:</li>
@@ -370,8 +373,8 @@ meant to fit with Cherry MX mechanical switches.
 </aside>
 
 </section>
-<section id="slide-org4ff08bd">
-<h3 id="org4ff08bd"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
+<section id="slide-orgc9d389b">
+<h3 id="orgc9d389b"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Manuform.jpg" alt="Dactyl Manuform.jpg" />
@@ -395,16 +398,15 @@ switch to this in the future.
 </p>
 
 </aside>
-
+<section data-background-iframe="https://xahlee.info/kbd/diy_keyboards_index.html" data-background-interactive></section>
 </section>
 </section>
 <section>
-<section id="slide-org93964f0">
-<h2 id="org93964f0">More Do-it-Yourself Options</h2>
+<section id="slide-org97c8fe4">
+<h2 id="org97c8fe4">More Do-it-Yourself Options</h2>
 <p>
 <code>There is a very nice list of other ergonomic keyboards, with pictures, on Xah Lee's website.</code>
 </p>
-
 <ul>
 <li><a href="http://xahlee.info/kbd/diy_keyboards_index.html">http://xahlee.info/kbd/diy_keyboards_index.html</a></li>
 
@@ -413,8 +415,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-orgb345363">
-<h2 id="orgb345363">Reasons for Choosing Dactyl</h2>
+<section id="slide-orgc0381d6">
+<h2 id="orgc0381d6">Reasons for Choosing Dactyl</h2>
 <ul>
 <li>Open Source</li>
 <li>Kinesis Advantage form factor</li>
@@ -423,8 +425,8 @@ switch to this in the future.
 
 </ul>
 </section>
-<section id="slide-org787aae4">
-<h3 id="org787aae4">My Reasons for Building by Hand Instead of Purchasing</h3>
+<section id="slide-orge94890b">
+<h3 id="orge94890b">My Reasons for Building by Hand Instead of Purchasing</h3>
 <ul>
 <li>At the time there were none being manufactured</li>
 <li>Sense of self-satisfaction</li>
@@ -436,13 +438,13 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-orgb2b8d61">
-<h2 id="orgb2b8d61">Build Overview</h2>
-<div class="outline-text-2" id="text-orgb2b8d61">
+<section id="slide-org715cbca">
+<h2 id="org715cbca">Build Overview</h2>
+<div class="outline-text-2" id="text-org715cbca">
 </div>
 </section>
-<section id="slide-org1ff5ea6">
-<h3 id="org1ff5ea6">Shell/Case &amp; Hardware</h3>
+<section id="slide-orgfff34a1">
+<h3 id="orgfff34a1">Shell/Case &amp; Hardware</h3>
 <ul>
 <li>Time</li>
 <li>Apologize for lack of media</li>
@@ -458,8 +460,8 @@ switch to this in the future.
 </aside>
 
 </section>
-<section id="slide-org55cc649">
-<h3 id="org55cc649">Switches &amp; Keycaps</h3>
+<section id="slide-orgd9d5141">
+<h3 id="orgd9d5141">Switches &amp; Keycaps</h3>
 <ul>
 <li>Fits Cherry MX switches, explain what they are</li>
 <li>Go over keycap profiles</li>
@@ -467,25 +469,36 @@ switch to this in the future.
 
 </ul>
 </section>
-<section id="slide-orgdc7fa8c">
-<h3 id="orgdc7fa8c">Etching</h3>
+<section id="slide-orge27b2c5">
+<h3 id="orge27b2c5">Etching</h3>
 <ul>
-<li>1:1 ratio of 3% Hydrogen Peroxide &amp; Acid Magic (muriatic acid)</li>
+<li>1:1 ratio of 3% Hydrogen Peroxide &amp; Acid Magic (Marketed as 'safer' Muriatic
+Acid, found on Amazon.)</li>
+<li>All etching tutorial info (Storage &amp; reuse)</li>
 
 </ul>
 </section>
-<section id="slide-org3e4babd">
-<h3 id="org3e4babd">PCB &amp; Wiring</h3>
+<section id="slide-orgd245b3c">
+<h4 id="orgd245b3c">Etching Process</h4>
+<section><video controls><source data-src="media/Etching.mp4" type="video/mp4" /></video></section>
+
+<p>
+<a href="media/Etching.mp4">media/Etching.mp4</a>
+</p>
+</section>
+<section id="slide-orgfab3b7b">
+<h3 id="orgfab3b7b">PCB &amp; Wiring</h3>
 <ul>
 <li>The circuit design in the repo is inaccurate. I had to flip around some of
 the designs because they were backwards. I didn't find this out until after my
 first attempt at etching. Luckily I had another sheet of Pyralux that I bought
 in case I encountered those kinds of problems.</li>
+<li>Had to cross reference wiring with imgur images.</li>
 <li>Resistors for LEDs</li>
 
 </ul>
 <ul class="org-ul">
-<li><a id="org579386b"></a>PSA: TRRS <i>not</i> TRS!<br />
+<li><a id="orge34fc2f"></a>PSA: TRRS <i>not</i> TRS!<br />
 <ul>
 <li>Include comparison.</li>
 
@@ -499,18 +512,18 @@ in case I encountered those kinds of problems.</li>
 </li>
 </ul>
 </section>
-<section id="slide-org3bbf9b5">
-<h3 id="org3bbf9b5">Firmware</h3>
+<section id="slide-org47f3622">
+<h3 id="org47f3622">Firmware</h3>
 </section>
-<section id="slide-orgc3ab828">
-<h3 id="orgc3ab828">How Does it Work?</h3>
+<section id="slide-org93e86c0">
+<h3 id="org93e86c0">How Does it Work?</h3>
 <ul>
 <li>Explain matrix positions</li>
 
 </ul>
 </section>
-<section id="slide-orgda5c932">
-<h3 id="orgda5c932">Challenges</h3>
+<section id="slide-org8cc155e">
+<h3 id="org8cc155e">Challenges</h3>
 <ul>
 <li>Hardware, clearance &amp; dimensions</li>
 <li>Choosing LED Resistors</li>
@@ -522,8 +535,8 @@ in case I encountered those kinds of problems.</li>
 
 </ul>
 </section>
-<section id="slide-org253501b">
-<h3 id="org253501b">What Did it Cost?</h3>
+<section id="slide-org3cb26c2">
+<h3 id="org3cb26c2">What Did it Cost?</h3>
 <ul>
 <li>Parts table</li>
 
@@ -531,8 +544,8 @@ in case I encountered those kinds of problems.</li>
 </section>
 </section>
 <section>
-<section id="slide-org4dce776">
-<h2 id="org4dce776">Resources</h2>
+<section id="slide-orgc8cb5b4">
+<h2 id="orgc8cb5b4">Resources</h2>
 <ul>
 <li><a href="https://drop.com">Drop.com (formerly MassDrop)</a></li>
 
@@ -562,8 +575,8 @@ commercialize different Dactyl variations.
 <code>I have no affiliation or experience with the above. YMMV!</code>
 </p>
 </section>
-<section id="slide-orgd428acd">
-<h3 id="orgd428acd">Hardware &amp; Accessories</h3>
+<section id="slide-orgaad7d9c">
+<h3 id="orgaad7d9c">Hardware &amp; Accessories</h3>
 <ul>
 <li><a href="https://kbdfans.com">https://kbdfans.com</a></li>
 <li><a href="https://aliexpress.com">https://aliexpress.com</a>
